--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,15 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <nav class="navbar bg-light">
+      <nav class="navbar bg-white">
         <%= link_to 'QuestReview', root_path, class: "navbar-brand" %>
         <% if user_signed_in? %>
+          <%= link_to 'クエスト一覧', quests_path %>
+          <%= link_to 'クエスト登録', new_quest_path %>
           <!--strong><%#= link_to current_user.user_name, pages_show_path %></strong-->
           <%= link_to 'プロフィール変更', edit_user_registration_path %>
           <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
@@ -23,8 +24,7 @@
         <% end %>
       </nav>
     </header>
-    <div class="container">
-      <%= yield %>
-    </div>
+    <%= yield %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
