--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -22,19 +22,43 @@
       <button class="col review_content_button">質問・その他</button>
     </div>
   </nav>
-  <div class="d-flex justify-content-center">
-    <div class="comment_container_container d-flex justify-content-center text-center overflow-hidden">
+  <div>
+    <div class="comment_container_container mx-auto overflow-hidden">
       <div class="d-flex justify-content-center comment_container">
-        <div class="w-100 flex-shrink-0 comment comment1 overflow-auto">
-          hoge
+        <div class="comment w-100 flex-shrink-0 overflow-auto my-3">
+          <%= render 'comments/form', comment: Comment.new, quest_id: @quest.id, opinion_type: "positive" %>
+          <% @positive_comments.each do |comment| %>
+            <div class="mx-2 my-3 border-bottom">
+              <p><%= "#{comment.user.user_name}さん"%></p>
+              <p><%= comment.content %></p>
+            </div>
+          <% end %>
         </div>
-        <div class="w-100 flex-shrink-0 comment comment2 overflow-auto">
-          fuga
+        <div class="comment w-100 flex-shrink-0 overflow-auto my-3">
+          <% @negative_comments.each do |comment| %>
+            <div class="mx-2 my-3 border-bottom">
+              <p><%= "#{comment.user.user_name}さん"%></p>
+              <p><%= comment.content %></p>
+            </div>
+          <% end %>
         </div>
-        <div class="w-100 flex-shrink-0 comment comment3 overflow-auto">
-          pote
+        <div class="comment w-100 flex-shrink-0 overflow-auto my-3">
+          <% @question_comments.each do |comment| %>
+            <div class="mx-2 my-3 border-bottom">
+              <p><%= "#{comment.user.user_name}さん"%></p>
+              <p><%= comment.content %></p>
+            </div>
+          <% end %>
         </div>
       </div>
+    </div>
+    <div class="sticky_test">
+      <%= link_to new_comment_path(quest_id: @quest.id, opinion_type: "positive"), remote: true do %>
+        <button class="rounded-pill px-3 py-3 d-flex justify-content-center mx-auto shadow border border-white">
+          <div class="icon text-white my-auto mx-2">＋</div>
+          <div class="font-weight-bold mx-2">「良かった点」を投稿</div>
+        </button>
+      <% end %>
     </div>
   </div>
 </div>
@@ -42,3 +66,4 @@
 <p>footer</p>
 <p>footer</p>
 <p>footer</p>
+<div id="comment-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
