--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,5 +1,7 @@
-<% @quests.each do |quest| %>
-  <div>
-    <%= link_to "Quest#{quest.develop_id} : #{quest.title}", quest_path(quest.id) %>
-  </div>
-<% end %>
+<div class="page_head p-4">
+  <% @quests.each do |quest| %>
+    <div>
+      <p><%= link_to "Quest#{quest.develop_id} : #{quest.title}", quest_path(quest.id) %></p>
+    </div>
+  <% end %>
+</div>
