クエスト詳細ページでコメント投稿数を可視化

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,5 @@
-.quest {
+.page_head {
   background-color: #F5F9FD;
-  //background-color: #FCFAF5;
 }
 
 .review_header {
@@ -54,6 +53,14 @@
   font-size: 13px;
   border-radius: 50%;
   background-color: #2E88FB;
+}
+
+.icon-red {
+  background-color: #EB6566;
+}
+
+.icon-yellow {
+  background-color: #F3A533;
 }
 
 .comment_hide {
