--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,4 @@
+
 .page_head {
   background-color: #F5F9FD;
 }
@@ -65,4 +66,9 @@
 
 .comment_hide {
   display: none;
+}
+
+.image_icon {
+  width: 32px;
+  height: 32px;
 }
