--- a/app/views/comments/_modal_form.html.erb
+++ b/app/views/comments/_modal_form.html.erb
@@ -10,11 +10,12 @@
       <div class="my-3 text-center">
         <%= form_with model: comment, remote: true do |f| %>
           <div class="form-group">
-            <%= f.label "#{opinion(opinion_type)}" %><br>
+            <%= f.label "#{opinion(comment.opinion_type)}" %><br>
             <%= f.text_area :content, cols: "50", rows: "5"%>
           </div>
-          <%= f.hidden_field :quest_id, value: quest_id %>
-          <%= f.hidden_field :opinion_type, value: opinion_type %>
+          <%= f.hidden_field :quest_id, value: comment.quest_id %>
+          <%= f.hidden_field :opinion_type, value: comment.opinion_type %>
+          <%= f.hidden_field :parent_id, value: comment.parent_id %>
           <%= f.submit "コメントする", class: "btn btn-primary" %>
         <% end %>
       </div>
