--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
         <p><%= icon('far', 'square-full') %> 使用方法</p>
         <div class="mx-2">
           <p>・企画側でコンセプトを明記して、クエストを登録</p>
-          <p>・クエストをプレイした人は、コンセプトを満たしたゲーム体験が出来たかどうかをレビュー（もちろんそれ以外の感想も書いてOK！）</p>
+          <p>・クエストをプレイした人は、コンセプトを満たしたゲーム体験が出来たかどうかをレビュー（それ以外の感想も書いてOK！）</p>
         </div>
       </div>
       <div class="my-4">
