--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,2 +1,5 @@
 $("p[data-comment-id=<%= @comment.id %>]").html("<%= safe_join(@comment.content.split("\n"), tag(:br)) %>");
+$('div[data-comment-id=' + <%= @comment.id %> + '] .comment_edit_form').hide();
+$('div[data-comment-id=' + <%= @comment.id %> + '] .comment_content').show();
+
 $("#comment-modal").modal("hide");
