--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,10 +3,15 @@
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "users/shared/error_messages", resource: resource %>
+    
+    <div class="form-group">
+      <%= f.label :user_name %>
+      <%= f.text_field :user_name, autofocus: true, class: "d-block" %>
+    </div>
   
     <div class="form-group">
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "d-block" %>
+      <%= f.email_field :email, autocomplete: "email", class: "d-block" %>
     </div>
   
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -32,13 +37,13 @@
     </div>
   
     <div class="form-group">
-      <%= f.submit "Update" %>
+      <%= f.submit "Update", class: "btn btn-primary" %>
     </div>
   <% end %>
   
   <h3>Cancel my account</h3>
   
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
   
   <%= link_to "Back", :back %>
 </div>
