--- a/app/views/comments/_reply_form.html.erb
+++ b/app/views/comments/_reply_form.html.erb
@@ -2,10 +2,10 @@
   <div>
     <%= image_tag current_user.decorate.image_url, class: "image_icon rounded-circle" %>
   </div>
-  <div class="ml-2">
+  <div class="ml-2", style="width: 100%;">
     <%= form_with model: comment, remote: true do |f| %>
       <div class="form-group mb-2">
-        <%= f.text_area :content, cols: "55", rows: "5", placeholder: "返信"%>
+        <%= f.text_area :content, style: "width: 90%; height: 150px;", placeholder: "返信"%>
       </div>
       <%= f.hidden_field :quest_id, value: comment.quest_id %>
       <%= f.hidden_field :opinion_type, value: comment.opinion_type %>
