--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,4 +1,9 @@
 <div class="page_head p-4">
+  <% flash.each do |key, value| %>
+    <% key = "info" if key == "notice" %>
+    <% key = "danger"  if key == "alert" %>
+    <%= content_tag :div, value, class: "alert alert-#{key}" %>
+  <% end %>
   <% @quests.each do |quest| %>
     <div>
       <p><%= link_to "Quest#{quest.develop_id} : #{quest.title}", quest_path(quest.id) %></p>
