--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -2,10 +2,7 @@
   <div class="alert alert-danger">
     <div id="error_explanation">
       <h2>
-        <%= I18n.t("errors.messages.not_saved",
-                   count: resource.errors.count,
-                   resource: resource.class.model_name.human.downcase)
-         %>
+         ValidationError
       </h2>
       <ul>
         <% resource.errors.full_messages.each do |message| %>
