--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -15,10 +15,7 @@
     </div>
   
     <div class="form-group">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %>
+      <%= f.label :password, "パスワード（#{@minimum_password_length}文字以上）" %>
       <%= f.password_field :password, autocomplete: "new-password", class: "d-block" %>
     </div>
   
