--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -2,7 +2,7 @@
   <div class="alert alert-danger">
     <div id="error_explanation">
       <h2>
-         ValidationError
+         Error
       </h2>
       <ul>
         <% resource.errors.full_messages.each do |message| %>
