--- a/app/views/quests/_form.html.erb
+++ b/app/views/quests/_form.html.erb
@@ -1,20 +1,22 @@
-<%= form_with(model: quest, local: true) do |f| %>
-  <%= render 'users/shared/error_messages', resource: quest %>
-  <div class="form-group">
-    <%= f.label "Questid" %><br>
-    <%= f.text_field :develop_id, placeholder: "開発ID" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "担当者" %><br>
-    <%= f.text_field :responsible %>
-  </div>
-  <div class="form-group">
-    <%= f.label "タイトル" %><br>
-    <%= f.text_field :title, size: "45" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "コンセプト" %><br>
-    <%= f.text_area :content, cols: "45", rows: "5", placeholder: "このクエストのコンセプト" %>
-  </div>
-  <%= f.submit class: "btn btn-primary" %>
-<% end %>
+<div class="quest_form">
+  <%= form_with(model: quest, local: true) do |f| %>
+    <%= render 'users/shared/error_messages', resource: quest %>
+    <div class="form-group">
+      <%= f.label "Questid" %><br>
+      <%= f.text_field :develop_id, placeholder: "開発ID" %>
+    </div>
+    <div class="form-group">
+      <%= f.label "担当者" %><br>
+      <%= f.text_field :responsible %>
+    </div>
+    <div class="form-group">
+      <%= f.label "タイトル" %><br>
+      <%= f.text_field :title, style: "width: 90%;" %>
+    </div>
+    <div class="form-group">
+      <%= f.label "コンセプト" %><br>
+      <%= f.text_area :content, placeholder: "このクエストのコンセプト", style: "width: 90%; height: 150px;" %>
+    </div>
+    <%= f.submit class: "btn btn-primary" %>
+  <% end %>
+</div>
