--- a/app/views/quests/edit.html.erb
+++ b/app/views/quests/edit.html.erb
@@ -5,10 +5,11 @@
     <%= content_tag :div, value, class: "alert alert-#{key}" %>
   <% end %>
   <%= render 'form', quest: @quest %>
-  <div class="my-5">
+  <div class="my-4">
     <%= link_to quest_path(@quest.id), method: :delete, data: { confirm: '削除しますか？' } do %>
       <%= icon('fas', 'trash-alt') %>
       <span>クエストの削除</span>
     <% end %>
   </div>
+  <p><%= link_to "戻る", quest_path(@quest.id) %></p>
 </div>
