コメントフォームレイアウトのレスポンシブ対応

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex" data-comment-id=<%= comment.id %>>
+<div class="d-flex mx-auto", style="width: 95%;", data-comment-id=<%= comment.id %>>
   <div>
     <%= image_tag comment.user.decorate.image_url, class: "image_icon rounded-circle" %>
   </div>
