--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="mb-4">
       <div>
-        <% if comment.is_parent %>
+        <% if comment.parent.blank? %>
           <button class="comment_icon reply_button bg-transparent" data-replied-id=<%= comment.id %>>
             <%= icon('fas', 'comment-medical') %>
           </button>
@@ -29,7 +29,7 @@
         <% end %>
       </div>
       <div class="my-4 reply_form">
-        <% if comment.is_parent %>
+        <% if comment.parent.blank? %>
           <%= render 'comments/reply_form', comment: Comment.new(
             quest_id: comment.quest_id, opinion_type: comment.opinion_type, parent_id: comment.id) %>
         <% end %>
