--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -22,7 +22,7 @@
             <%= icon('fas', 'edit') %>
           </button>
           <%= link_to comment_path(comment.id), remote: true, method: :delete, data: { confirm: '削除しますか？' } do %>
-            <button class="comment_icon bg-transparent" data-delete-comment-id=<%= comment.id %>>
+            <button class="comment_icon comment_delete_button bg-transparent" data-delete-comment-id=<%= comment.id %>>
               <%= icon('fas', 'trash-alt') %>
             </button>
           <% end %>
