--- a/app/views/quests/_form.html.erb
+++ b/app/views/quests/_form.html.erb
@@ -2,19 +2,19 @@
   <%= form_with(model: quest, local: true) do |f| %>
     <%= render 'users/shared/error_messages', resource: quest %>
     <div class="form-group">
-      <%= f.label "Questid" %><br>
+      <%= f.label "develop_id", "Questid" %><br>
       <%= f.text_field :develop_id, placeholder: "開発ID" %>
     </div>
     <div class="form-group">
-      <%= f.label "担当者" %><br>
+      <%= f.label "responsible", "担当者" %><br>
       <%= f.text_field :responsible %>
     </div>
     <div class="form-group">
-      <%= f.label "タイトル" %><br>
+      <%= f.label "title", "タイトル" %><br>
       <%= f.text_field :title, style: "width: 90%;" %>
     </div>
     <div class="form-group">
-      <%= f.label "コンセプト" %><br>
+      <%= f.label "content", "コンセプト" %><br>
       <%= f.text_area :content, placeholder: "このクエストのコンセプト", style: "width: 90%; height: 150px;" %>
     </div>
     <%= f.submit class: "btn btn-primary" %>
