--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,11 +12,14 @@ body {
   }
 }
 
-.review_header {
+.opinion_container {
   position: relative;
   width: 95vw;
   font-size: 14px;
-  
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
   @media (min-width: 526px) {
     width: 500px;
     font-size: 15px;
@@ -24,7 +27,7 @@ body {
 
 }
 
-.review_header_bar {
+.opinion_select_bar {
   position: absolute;
   height: 2px;
   width: 33.3%;
@@ -33,11 +36,22 @@ body {
   left: 0%;
 }
 
-.review_content_button {
+.opinion_tab {
   border: none;
   text-align: center;
   padding: 5px 0;
-  
+  font-weight: bold;
+  background-color: transparent;
+
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+
+  @media (min-width: 576px) {
+    flex-direction: row;
+    justify-content: center;
+  }
+
   &:focus {
     outline: 0;
   }
@@ -51,43 +65,49 @@ body {
   color: #949faf;
 }
 
-.comment_container_container {
+.comments_visible_area {
+  overflow: hidden;
+  margin: auto;
   width: 95vw;
-  
+
   @media (min-width: 526px) {
     width: 500px;
   }
 }
 
-.comment_container {
+.comments_group {
   position: relative;
-  //width: 500px;
-  
   display: -webkit-box;
-  
   transition: transform(0.35s);
-  //transform: translate(-100%, 0px);
-  
   width: 95vw;
-  
+
   @media (min-width: 526px) {
     width: 500px;
   }
 }
 
-.comment {
-  width: 95vw;
-  
-  @media (min-width: 526px) {
-    width: 500px;
-  }
+.comments_section {
+  width: 100%;
+  flex-shrink: 0;
+  overflow: auto;
+  margin: 1rem 0;
+  //width: 95vw;
+
+  //@media (min-width: 526px) {
+  //  width: 500px;
+  //}
 }
 
-.icon {
+.opinion_icon {
   width: 20px;
   height: 20px;
   font-size: 13px;
   border-radius: 50%;
+  color: white;
+  margin: 0.5rem;
+}
+
+.icon-blue {
   background-color: #2E88FB;
 }
 
