--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,14 +1,14 @@
 <% if @comment.parent.blank? %>
   <% case @comment.opinion_type
     when "positive" %>
-      $('.comment:eq(0)').append("<%= escape_javascript(render 'parent_comment', comment: @comment) %>");
-      $('.review_content_button:eq(0) div:eq(1)').text("<%= @comments.length %>");
+      $('.comments_section:eq(0)').append("<%= escape_javascript(render 'parent_comment', comment: @comment) %>");
+      $('.opinion_tab:eq(0) div:eq(1)').text("<%= @comments.length %>");
     <% when "negative" %>
-      $('.comment:eq(1)').append("<%= escape_javascript(render 'parent_comment', comment: @comment) %>");
-      $('.review_content_button:eq(1) div:eq(1)').text("<%= @comments.length %>");
+      $('.comments_section:eq(1)').append("<%= escape_javascript(render 'parent_comment', comment: @comment) %>");
+      $('.opinion_tab:eq(1) div:eq(1)').text("<%= @comments.length %>");
     <% when "question" %>
-      $('.comment:eq(2)').append("<%= escape_javascript(render 'parent_comment', comment: @comment) %>");
-      $('.review_content_button:eq(2) div:eq(1)').text("<%= @comments.length %>");
+      $('.comments_section:eq(2)').append("<%= escape_javascript(render 'parent_comment', comment: @comment) %>");
+      $('.opinion_tab:eq(2) div:eq(1)').text("<%= @comments.length %>");
   <% end %>
   $('.comment_form textarea').val("");
 <% else %>
